--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Lesson-8-flex</title>
 </head>
 
